# waive

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  RALPH_MVP.md  README.md  run_phases.sh
.github/workflows/: ci.yml
ai/: requirements.txt  waive_client.py
ai/skills/: __init__.py  ghost_engineer.py  groove_matcher.py  stem_splitter.py  style_transfer.py  temporal_arranger.py
ai/tests/: __init__.py  conftest.py  test_integration.py  test_skills.py  test_waive_client.py
docs/: architecture.md  command_protocol.md  command_schema.json  dev_conventions.md  gui_plan.md  phased_implementation_plan.md  testing.md  tracktion_cheatsheet.md
docs/zeroshot_phases_final/: README.md  phase_01_chat_history_persistence.md  phase_01_critical_correctness_and_safety.md  phase_01_docs_ci_shortcuts.md  phase_01_security_hardening.md  phase_02_model_workflow_completeness.md  phase_02_recording_improvements.md  phase_02_render_dialog.md  phase_02_ux_foundations.md  phase_03_core_missing_features.md  phase_03_essential_daw_workflows.md  phase_03_external_tool_runner.md  phase_03_midi_piano_roll.md  phase_04_midi_piano_roll_polish.md  phase_04_performance_optimization.md  phase_04_python_tools.md  phase_04_uiux_and_design_polish.md  phase_05_ai_tool_execution.md  phase_05_performance_and_scalability.md  phase_05_plugin_presets.md  phase_05_timeline_and_mixer_polish.md  phase_06_accessibility_and_validation.md  phase_06_track_grouping_vca.md  phase_06_ui_screenshot_review.md  phase_06_validation_docs_and_release_readiness.md  phase_07_clip_editing_commands.md  phase_07_project_packaging.md  phase_08_test_iteration_fix_loop.md  phase_08_track_and_transport_commands.md  phase_09_export_and_plugin_management.md  phase_10_dynamic_tool_discovery.md  phase_11_ai_audio_analysis_tools.md  phase_12_ai_audio_processing_tools.md  phase_13_ui_spacing_standardization.md  phase_14_screenshot_driven_ui_polish.md  phase_15_automation_and_fade_commands.md  phase_16_undo_markers_session_commands.md  phase_17_test_infrastructure_stability.md  phase_18_audio_tool_validation_benchmarks.md  phase_19_cpp_tool_validation_benchmarks.md  (+1 more)
engine/: CMakeLists.txt
engine/src/: CommandHandler.cpp  CommandHandler.h  CommandServer.cpp  CommandServer.h  Main.cpp
gui/: CMakeLists.txt
gui/src/: Main.cpp  MainComponent.cpp  MainComponent.h
gui/src/ai/: AiAgent.cpp  AiAgent.h  AiProvider.cpp  AiProvider.h  AiSettings.cpp  AiSettings.h  AiToolSchema.cpp  AiToolSchema.h  ChatHistorySerializer.cpp  ChatHistorySerializer.h  ChatPanelComponent.cpp  ChatPanelComponent.h  ProjectChatHistoryController.cpp  ProjectChatHistoryController.h
gui/src/edit/: AutoSaveManager.cpp  AutoSaveManager.h  EditSession.cpp  EditSession.h  ProjectManager.cpp  ProjectManager.h  UndoableCommandHandler.cpp  UndoableCommandHandler.h
gui/src/theme/: WaiveColours.cpp  WaiveColours.h  WaiveFonts.h  WaiveLookAndFeel.cpp  WaiveLookAndFeel.h  WaiveSpacing.h
gui/src/tools/: AlignClipsByTransientTool.cpp  AlignClipsByTransientTool.h  AudioAnalysis.cpp  AudioAnalysis.h  AudioAnalysisCache.cpp  AudioAnalysisCache.h  AutoMixSuggestionsTool.cpp  AutoMixSuggestionsTool.h  ClipTrackIndexMap.cpp  ClipTrackIndexMap.h  DetectSilenceAndCutRegionsTool.cpp  DetectSilenceAndCutRegionsTool.h  ExternalTool.cpp  ExternalTool.h  ExternalToolManifest.cpp  ExternalToolManifest.h  ExternalToolRunner.cpp  ExternalToolRunner.h  GainStageSelectedTracksTool.cpp  GainStageSelectedTracksTool.h  JobQueue.cpp  JobQueue.h  ModelManager.cpp  ModelManager.h  NormalizeSelectedClipsTool.cpp  NormalizeSelectedClipsTool.h  PluginPresetManager.cpp  PluginPresetManager.h  RenameTracksFromClipsTool.cpp  RenameTracksFromClipsTool.h  StemSeparationTool.cpp  StemSeparationTool.h  Tool.h  ToolDiff.cpp  ToolDiff.h  ToolRegistry.cpp  ToolRegistry.h
gui/src/ui/: ClipComponent.cpp  ClipComponent.h  ClipEditActions.cpp  ClipEditActions.h  ConsoleComponent.cpp  ConsoleComponent.h  LibraryComponent.cpp  LibraryComponent.h  MixerChannelStrip.cpp  MixerChannelStrip.h  MixerComponent.cpp  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  PlayheadComponent.cpp  PlayheadComponent.h  PluginBrowserComponent.cpp  PluginBrowserComponent.h  PluginPresetBrowser.cpp  PluginPresetBrowser.h  RenderDialog.cpp  RenderDialog.h  SchemaFormComponent.cpp  SchemaFormComponent.h  SelectionManager.cpp  SelectionManager.h  SessionComponent.cpp  SessionComponent.h  TimeRulerComponent.cpp  TimeRulerComponent.h  TimelineComponent.cpp  TimelineComponent.h  ToolLogComponent.cpp  ToolLogComponent.h  ToolSidebarComponent.cpp  ToolSidebarComponent.h  ToolsComponent.cpp  ToolsComponent.h  TrackLaneComponent.cpp  TrackLaneComponent.h
gui/src/util/: CommandHelpers.cpp  CommandHelpers.h  PathSanitizer.cpp  PathSanitizer.h  ProjectPackager.cpp  ProjectPackager.h  ScreenshotCapture.cpp  ScreenshotCapture.h  UiMessageHelpers.h
logs/phases/: phase_01.cluster_id  phase_02.cluster_id  phase_03.cluster_id  phase_04.cluster_id  phase_05.cluster_id  phase_06.cluster_id  phase_07.cluster_id  phase_08.cluster_id  phase_09.cluster_id  phase_10.cluster_id  phase_11.cluster_id  phase_12.cluster_id  phase_13.cluster_id  phase_14.cluster_id  phase_15.cluster_id  phase_16.cluster_id  phase_17.cluster_id  phase_18.cluster_id  phase_19.cluster_id  phase_20.cluster_id
scripts/: dev_watch.sh  ralph-mvp.sh  setup.sh  ui_review.sh
shared/src/: PathSanitizer.cpp  PathSanitizer.h  PluginPresetManager.cpp  PluginPresetManager.h  ProjectPackager.cpp  ProjectPackager.h
tests/: CMakeLists.txt  WaiveCoreTests.cpp  WaiveToolTests.cpp  WaiveUiTests.cpp
tools/: setup.sh  tool_io.py
tools/audio_to_midi/: .waive-tool.json  __main__.py
tools/auto_eq/: .waive-tool.json  __main__.py
tools/beat_detection/: .waive-tool.json  __main__.py
tools/chord_detection/: .waive-tool.json  __main__.py
tools/key_detection/: .waive-tool.json  __main__.py
tools/mastering_assistant/: .waive-tool.json  __main__.py
tools/music_generation/: music_generation.py  music_generation.waive-tool.json  requirements.txt
tools/tests/: audio_fixtures.py  (+9 more)
(+7 files in other folders)
